[package]
name = "nano_search"
version = "0.1.0"
edition = "2021"

[dependencies]
heed = "0.21.0"
nanopyrs = "0.4.0"
# nanocurrency-types = "0.4.0"
chrono = "0.4.39"
rocket = "0.5.1"
regex = "1.11.1"
tokio-websockets = { version = "0.11.2", features = ["client", "fastrand", "native-tls", "openssl"] }
http = "1.2.0"
tokio = "1.43.0"
serde_json = "1.0.138"

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"
